--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-pandas
-matplotlib
-aliyun-python-sdk-core
-telethon
+pandas==2.3.3
+matplotlib==3.10.7
+aliyun-python-sdk-core==2.16.0
+telethon==1.41.2
+numpy==2.3.4
+python-dateutil==2.9.0.post0
+pytz==2025.2
+tzdata==2025.2
+contourpy==1.3.3
