--- a/fly.toml
+++ b/fly.toml
@@ -13,6 +13,6 @@ worker = "python /app/dataAPI.py"
   cpu_kind = "shared"
   processes = ["worker"]
 
-# [[mounts]]
-#  source = "data"
-#  destination = "/data"
+ [[mounts]]
+  source = "data"
+  destination = "/data"
