--- a/fly.toml
+++ b/fly.toml
@@ -5,7 +5,7 @@ primary_region = "sin"   # 東京，可改成你要的地區
 dockerfile = "Dockerfile"
 
 [processes]
-worker = "python /app/dataAPI.py"
+worker = "python /app/login.py"
 
 [[vm]]
   memory_mb = 1024
